--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,14 +1,14 @@
 <html>
     <head>
-      {% if title %}
-      <title>{{ title }} - Microblog</title>
-      {% else %}
-      <title>Welcome to Microblog</title>
-      {% endif %}
+        {% if title %}
+        <title>{{ title }} - microblog</title>
+        {% else %}
+        <title>microblog</title>
+        {% endif %}
     </head>
     <body>
         <div>
-            Microblog: 
+            Microblog:
             <a href="/index">Home</a>
             <a href="/login">Login</a>
         </div>
